--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
     "stylus": "^0.54.5",
-    "vue": "^2.4.2"
+    "vue": "^2.4.2",
+    "vue-router": "^2.7.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
